--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.totals{
+  text-align: center;
+  font-weight: bold;
+  align-content: center;
+  font-size: 1.2em;
+
+}
