--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,61 @@ code {
     monospace;
 }
 
-.totals{
+.totals {
   text-align: center;
   font-weight: bold;
   align-content: center;
   font-size: 1.2em;
 
 }
+
+.cwa {
+  background-color: rgba(0, 0, 0, 0.425) !important;
+  color: white;
+}
+
+.collapse {
+  display: none;
+}
+
+
+
+/* ? FOR THE ARROW IN FRONT OF THE SEMESTER */
+
+.toggle-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px 12px;
+  background-color: #e6e6e6;
+  color: #333;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.arrow {
+  font-size: 60px;
+  margin-left: 0px;
+  transition: transform 0.3s ease;
+}
+
+.flipped {
+  transform: rotate(180deg);
+}
+
+.dropdown-content {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 200px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  padding: 8px;
+  z-index: 1;
+}
+
+
+
+
+
